Fix scrollbar styling

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -110,3 +110,17 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+}
